@@ -82,6 +82,7 @@ Version 0.0.4b (in progress)
 * [Improved] CSS tweaks, including primary and secondary column highlighting.
 * [Improved] Historical seasons dropdown menu removed from pages where it is not relevant.
 * [Fixed] Behaviour when function theme call is empty.
+* [Fixed] Sanitized input from GET and POST.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
